--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -3,15 +3,10 @@
 <head>
     <meta charset="<%=charset%>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <%- include('analytics.ejs') -%>
-
-    <%- include('metadata.ejs') -%>
-
-    <%- include('opengraph.ejs') -%>
-
-    <%- include('twitter.ejs') -%>
-
+    <%_ include('analytics.ejs') _%>
+    <%_ include('metadata.ejs') _%>
+    <%_ include('opengraph.ejs') _%>
+    <%_ include('twitter.ejs') _%>
     <link rel="canonical" href="<%=url%>" />
 </head>
 <body>
